--- a/index.html
+++ b/index.html
@@ -136,12 +136,21 @@
           placeholder="Digite aqui"
         ></textarea>
       </div>
-      <div class="form-group">
-        <p>Quantas refeições faz durante o dia? Em quais horários e locais você realiza sua refeições?</p>
+       <div class="form-group">
+        <p>Quantas refeições faz durante o dia?</p>
         <textarea
           id="RefDD"
           class="input-textarea"
           name="$QuantosRefeicoesFazNoDia"
+          placeholder="Digite aqui"
+        ></textarea>
+      </div>
+      <div class="form-group">
+        <p> Em quais horários e locais você realiza suas refeições?</p>
+        <textarea
+          id="RefDD"
+          class="input-textarea"
+          name="$HorariosLocaisRefeicoes"
           placeholder="Digite aqui"
         ></textarea>
       </div>
